tests/typechecking/invalid/sim_arth_wrng_typ.ml
let x = 2 in
let y = true in
x + y
